Fix up print CSS; do not cut off text
See #37

--- a/_sass/base/_utils.scss
+++ b/_sass/base/_utils.scss
@@ -16,10 +16,8 @@
 }
 
 .screen-only {
-  display: none;
-
   @media print {
-    display: block;
+    display: none;
   }
 }
 
