--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -31,7 +31,7 @@
         // Asterisk fleuron
         &:after {
           display: block;
-          margin: $spacing-04 auto;
+          margin: $spacing-05 auto;
           height: 1em;
           width: 1em;
           -webkit-print-color-adjust: exact;
